force-app/main/default/objects/Lead/fields/Alpha2code__c.field-meta.xml
<CustomField>
    <fullName>Alpha2code__c</fullName>
    <label>Alpha2code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>