force-app/main/default/objects/Lead/fields/Alpha3code__c.field-meta.xml
<CustomField>
    <fullName>Alpha3code__c</fullName>
    <label>Alpha3code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>