force-app/main/default/objects/Lead/validationRules/Cannot_Change_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Owner</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(OwnerId), 
OR(
   AND(ISBLANK(Country), $Profile.Name &lt;&gt; &quot;System Administrator&quot;),
   AND(ISBLANK(NumberOfEmployees), $Profile.Name &lt;&gt; &quot;System Administrator&quot;), 
   AND(ISBLANK(NumberOfEmployees), $Profile.Name &lt;&gt; &quot;Contract Manager&quot;),
   ISPICKVAL(LeadSource, &apos;&apos;)
   )
)</errorConditionFormula>
    <errorMessage>Can not change owner yet! Complete the requirements.</errorMessage>
</ValidationRule>